commit 3